fixing problem with height in menu on mobile phones

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -56,7 +56,7 @@ body {
 
   .menu.open-menu {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     border-bottom-left-radius: 0;
     z-index: 2;
   }
